[package]
name = "exoua"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
exolvl = "0.11"
flate2 = "1.0"
uuid = { version = "1.6", features = ["v4"] }
ordered-float = "4.2"

[[bin]]
name = "exoua"
path = "rust/src/main.rs"
