[package]
name = "exoua"
version = "0.1.0"
edition = "2021"

[dependencies]
# Exoracer level format library
exolvl = { git = "https://github.com/exoracer/exolvl.git" }

# Compression
flate2 = "1.0"

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
