[package]
name = "exoua"
version = "0.1.0"
edition = "2021"
default-run = "exoua"

[[bin]]
name = "exoua"
path = "rust/src/main.rs"

[[bin]]
name = "analyze"
path = "rust/src/analyze.rs"

[dependencies]
# Compression
flate2 = "1.0"

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
